--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  
   "dependencies": {
     "emoji-mart": "^5.6.0",
+    
+    "react-icons": "^5.5.0",
+
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-quill": "^2.0.0"
